--- a/lab3/src/makefile
+++ b/lab3/src/makefile
@@ -5,6 +5,9 @@ all: utils.o find_min_max.o utils.h find_min_max.h parallel_min_max.o sequential
 	$(CC) -o main_min_max find_min_max.o utils.o sequential_min_max.o $(CFLAGS)
 	$(CC) -o mainparal parallel_min_max.o utils.o find_min_max.o $(CFLAGS)
 
+exec: mainexec.o
+	$(CC) -o mainexec mainexec.o $(CFLAGS)
+
 sequential_min_max : utils.o find_min_max.o utils.h find_min_max.h
 	$(CC) -o sequential_min_max find_min_max.o utils.o sequential_min_max.c $(CFLAGS)
 
